fix(theme): improved contrast

--- a/frontend/static/themes/descent.css
+++ b/frontend/static/themes/descent.css
@@ -1,10 +1,10 @@
 /* theme by @bann6r */
 :root {
-    --bg-color: #17153b;
+    --bg-color: #0e0d21;
     --main-color: #c8acd6;
     --caret-color: #c8acd6;
-    --sub-color: #2e236c;
-    --sub-alt-color: #251c5a;
+    --sub-color: #51497e;
+    --sub-alt-color: #1f1a3d;
     --text-color: #ffffff;
     --error-color: #9290c3;
     --error-extra-color: #9290c3;
